kubernetes-networks/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homework-deployment
  namespace: homework
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: homework-pod           
  template:
    metadata:
      labels:
        app: homework-pod        
    spec:
      containers:
      - name: python-web
        image: python:3-alpine
        command: ['sh','-c','python -m http.server 8000']
        workingDir: /homework
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: shared-volume
          mountPath: /homework
        readinessProbe:
          httpGet:
            path: /index.html
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 3
        lifecycle:
          preStop:
            exec:
              command: ['rm','/homework/index.html']
      volumes:
      - name: shared-volume
        emptyDir: {}
