kubernetes-networks/service.yml
apiVersion: v1
kind: Service
metadata:
  name: homework-svc
  namespace: homework
spec:
  type: ClusterIP 
  selector:
    app: homework-pod  
  ports:
  - name: http
    port: 80           
    targetPort: 8000
    protocol: TCP
