kubernetes-networks/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homework-ingress
  namespace: homework
spec:
  ingressClassName: nginx     
  rules:
  - host: homework.otus         
    http:
      paths:
      - path: /  
        pathType: Prefix
        backend:
          service:
            name: homework-svc
            port:
              number: 80
